# lz-logger

./: CMakeLists.txt  README.md
include/: lz_log.h  lz_log_format.h
src/: lz_log.c  lz_log_format.c
